add img lazy, font preload

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/dahyun_favicon.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/dahyun_favicon.png" />
+    <link
+      rel="preload"
+      href="/fonts/DungGeunMo.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/dahyun_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
